--- a/BookStore/app/index.html
+++ b/BookStore/app/index.html
@@ -1,13 +1,8 @@
 <!DOCTYPE html>
-<html>
-<head ng-app="bookStoreApp">
-	<title>test</title>
-</head>
-<body>
-	<div ng-view>
-		
-	</div>
-</body>
+<html ng-app="bookStoreApp">
+<head>
+    <meta charset="UTF-8">
+    <title>BookStore</title>
 	<script src="framework/1.3.0/angular-1.3.0.js"></script>
 	<script src="framework/1.3.0/angular-animate.js"></script>
 	<script src="framework/1.3.0/angular-route.js"></script>
@@ -16,4 +11,10 @@
 	<script src="js/directives.js"></script>
 	<script src="js/filters.js"></script>
 	<script src="js/services.js"></script>
+</head>
+
+<body>
+	<div ng-view>
+	</div>
+</body>
 </html>
