--- a/BookStore/app/tpls/bookList.html
+++ b/BookStore/app/tpls/bookList.html
@@ -1,5 +1,5 @@
 <ul>
 	<li ng-repeat="book in books">
-		书名：{{book.name}}&nbsp;&nbsp;&nbsp;作者：{{book.auther}}
+		名字：{{book.name}}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;单位：{{book.auther}}
 	</li>
 </ul>
