--- a/BookStore/app/index.html
+++ b/BookStore/app/index.html
@@ -4,39 +4,44 @@
     <meta charset="UTF-8">
     <title>BookStore</title>
     <link href="framework/bootstrap-3.3.5-dist/css/bootstrap.css" rel="stylesheet">
-	<script src="framework/bootstrap-3.3.5-dist/js/bootstrap.js"></script>
-	<script src="framework/1.3.0/angular-1.3.0.js"></script>
-	<script src="framework/1.3.0/angular-animate.js"></script>
-	<script src="framework/1.3.0/angular-route.js"></script>
-	<script src="js/app.js"></script>
-	<script src="js/controllers.js"></script>
-	<script src="js/directives.js"></script>
-	<script src="js/filters.js"></script>
-	<script src="js/services.js"></script>
+    <link href="css/animations.css" rel="stylesheet">
 </head>
 
 <body>
-<div class="container-fluid">
-<a class="navbar-brand" href=""><hi>Lfex对公对账系统</hi></a>
-	
-</div>
+  <div class="container-fluid">
+    <div class="container-fluid">
+      <a class="navbar-brand" href=""><h4>Lfex对公对账系统</h4></a>
+    </div>
+    <p></p>
 
     <div class="container-fluid">
       <div class="row">
 
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-            <li class="active"><a href="#">首页 <span class="sr-only">(current)</span></a></li>
+            <li class="active"><a href="#">首页</a></li>
             <li><a href="#/uploadfile">数据导入</a></li>
             <li><a href="#/account">对账</a></li>
             <li><a href="#/updatename">修改主键</a></li>
           </ul>
         </div>
-
-		<div class="col-sm-offset-3 col-sm-3 col-md-2 sidebar" ng-view>
-		</div>
+        
+        <div class="col-sm-9 col-md-10 sidebar view-animate-container">
+          <div ng-view class="view-animate">
+          </div>
+        </div>
 
       </div>
     </div>
+  </div>
 </body>
+    <script src="framework/bootstrap-3.3.5-dist/js/bootstrap.js"></script>
+    <script src="framework/1.3.0/angular-1.3.0.js"></script>
+    <script src="framework/1.3.0/angular-animate.js"></script>
+    <script src="framework/1.3.0/angular-route.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/controllers.js"></script>
+    <script src="js/directives.js"></script>
+    <script src="js/filters.js"></script>
+    <script src="js/services.js"></script>
 </html>
